--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "canvas"
   ],
   "author": "Bhanu Tokas (24Beast)",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.21.1"
+  }
 }
